--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 <body style="background-color:lightblue;">
 
 <img id="AliceEve" width="0" height="0" style="visibility:hidden" src="AliceEve.png">
+<img id="AlexandraDaddario" width="0" height="0" style="visibility:hidden" src="AlexandraDaddario.png">
+<img id="AmandaSeyfried" width="0" height="0" style="visibility:hidden" src="AmandaSeyfried".png">
+<img id="AnaDeArmas" width="0" height="0" style="visibility:hidden" src="AnaDeArmas".png">
+<img id="AnneHathaway" width="0" height="0" style="visibility:hidden" src="AnneHathaway".png">
+<img id="AnyaTaylorJoy" width="0" height="0" style="visibility:hidden" src="AnyaTaylorJoy".png">
+<img id="ArielWinter" width="0" height="0" style="visibility:hidden" src="ArielWinter".png">
+<img id="BarbaraPalvin" width="0" height="0" style="visibility:hidden" src="BarbaraPalvin".png">
+<img id="BellaThorne" width="0" height="0" style="visibility:hidden" src="BellaThorne".png">
+<img id="BlakeLively" width="0" height="0" style="visibility:hidden" src="BlakeLively".png">
+<img id="BrendaSong" width="0" height="0" style="visibility:hidden" src="BrendaSong".png">
+<img id="CamilaMendes" width="0" height="0" style="visibility:hidden" src="CamilaMendes".png">
+<img id="ChloeBennet" width="0" height="0" style="visibility:hidden" src="ChloeBennet".png">
+<img id="DebbyRyan" width="0" height="0" style="visibility:hidden" src="DebbyRyan.png">
+
 
 <canvas id="myCanvas" onload = 'move()' onclick = "clickfunc()" width="800" height="400" style=" padding-left: 0;
     padding-right: 0;
@@ -58,6 +72,9 @@ ctx.drawImage(this.p, this.x, this.y, 150, 200);
 
 blockArray.push(new block(100, 100,AliceEve));
 
+blockArray.push(new block(300, 100,DebbyRyan));
+
+blockArray.push(new block(500, 100,BrendaSong));
 
 
 function move() {
