--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 
 <img id="AliceEve" width="0" height="0" style="visibility:hidden" src="AliceEve.png">
 <img id="AlexandraDaddario" width="0" height="0" style="visibility:hidden" src="AlexandraDaddario.png">
-<img id="AmandaSeyfried" width="0" height="0" style="visibility:hidden" src="AmandaSeyfried".png">
-<img id="AnaDeArmas" width="0" height="0" style="visibility:hidden" src="AnaDeArmas".png">
-<img id="AnneHathaway" width="0" height="0" style="visibility:hidden" src="AnneHathaway".png">
-<img id="AnyaTaylorJoy" width="0" height="0" style="visibility:hidden" src="AnyaTaylorJoy".png">
-<img id="ArielWinter" width="0" height="0" style="visibility:hidden" src="ArielWinter".png">
-<img id="BarbaraPalvin" width="0" height="0" style="visibility:hidden" src="BarbaraPalvin".png">
-<img id="BellaThorne" width="0" height="0" style="visibility:hidden" src="BellaThorne".png">
-<img id="BlakeLively" width="0" height="0" style="visibility:hidden" src="BlakeLively".png">
-<img id="BrendaSong" width="0" height="0" style="visibility:hidden" src="BrendaSong".png">
-<img id="CamilaMendes" width="0" height="0" style="visibility:hidden" src="CamilaMendes".png">
-<img id="ChloeBennet" width="0" height="0" style="visibility:hidden" src="ChloeBennet".png">
+<img id="AmandaSeyfried" width="0" height="0" style="visibility:hidden" src="AmandaSeyfried.png">
+<img id="AnaDeArmas" width="0" height="0" style="visibility:hidden" src="AnaDeArmas.png">
+<img id="AnneHathaway" width="0" height="0" style="visibility:hidden" src="AnneHathaway.png">
+<img id="AnyaTaylorJoy" width="0" height="0" style="visibility:hidden" src="AnyaTaylorJoy.png">
+<img id="ArielWinter" width="0" height="0" style="visibility:hidden" src="ArielWinter.png">
+<img id="BarbaraPalvin" width="0" height="0" style="visibility:hidden" src="BarbaraPalvin.png">
+<img id="BellaThorne" width="0" height="0" style="visibility:hidden" src="BellaThorne.png">
+<img id="BlakeLively" width="0" height="0" style="visibility:hidden" src="BlakeLively.png">
+<img id="BrendaSong" width="0" height="0" style="visibility:hidden" src="BrendaSong.png">
+<img id="CamilaMendes" width="0" height="0" style="visibility:hidden" src="CamilaMendes.png">
+<img id="ChloeBennet" width="0" height="0" style="visibility:hidden" src="ChloeBennet.png">
 <img id="DebbyRyan" width="0" height="0" style="visibility:hidden" src="DebbyRyan.png">
 
 
