--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ block.prototype.draw = function() {
 ctx.drawImage(this.p, this.x, this.y, 150, 200);
 };
 
-blockArray.push(new block(100, 100,AliceEve.png));
+blockArray.push(new block(100, 100,AliceEve));
 
-blockArray.push(new block(300, 100,DebbyRyan.png));
+blockArray.push(new block(300, 100,DebbyRyan));
 
-blockArray.push(new block(500, 100,BrendaSong.png));
+blockArray.push(new block(500, 100,BrendaSong));
 
 
 function move() {
