--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@ block.prototype.draw = function() {
 
 //blockArray.push(new block(500, 100,"BrendaSong"));
 
-
+var oneimg = document.getElementById("one");
+var twoimg = document.getElementById("two");
+var threeimg = document.getElementById("three");
 function move() {
 
 
@@ -77,6 +79,7 @@ ctx.fillRect(0,0, 800, 400);
 //for(var i = 0; i < blockArray.length; i++) {
         //blockArray[i].draw();
 //}
+
 
 ctx.drawImage(one,100, 100, 150, 200);
 
