--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@ var oneimg = document.getElementById("one");
 var twoimg = document.getElementById("two");
 var threeimg = document.getElementById("three");
 
+var AlexandraDaddario = document.getElementById("AlexandraDaddario");
+var AliceEve = document.getElementById("AliceEve");
+var AmandaSeyfried = document.getElementById("AmandaSeyfried");
+var AnaDeArmas = document.getElementById("AnaDeArmas");
+var AnneHathaway = document.getElementById("AnneHathaway");
+var AnyaTaylorJoy = document.getElementById("AnyaTaylorJoy");
+var ArielWinter = document.getElementById("ArielWinter");
+var BarbaraPalvin = document.getElementById("BarbaraPalvin");
+var BellaThorne = document.getElementById("BellaThorne");
+var BrendaSong = document.getElementById("BrendaSong");
+var CamilaMendes = document.getElementById("CamilaMendes");
+var ChloeBennet = document.getElementById("ChloeBennet");
+var DaisyRidley = document.getElementById("DaisyRidley");
+
+	
 var choice = ""; 
 function move() {
 
