--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 <img id="two" width="0" height="0" style="visibility:hidden" src="two.png">
 <img id="three" width="0" height="0" style="visibility:hidden" src="three.png">
 
-<img id="AlexandraDaddario.png" width="0" height="0" style="visibility:hidden" src="AlexandraDaddario.png">
-<img id="AliceEve.png" width="0" height="0" style="visibility:hidden" src="AliceEve.png">
-<img id="AmandaSeyfried.png" width="0" height="0" style="visibility:hidden" src="AmandaSeyfried.png">
+<img id="AlexandraDaddario" width="0" height="0" style="visibility:hidden" src="AlexandraDaddario.png">
+<img id="AliceEve" width="0" height="0" style="visibility:hidden" src="AliceEve.png">
+<img id="AmandaSeyfried" width="0" height="0" style="visibility:hidden" src="AmandaSeyfried.png">
 
-<img id="AnaDeArmas.png" width="0" height="0" style="visibility:hidden" src="AnaDeArmas.png">
-<img id="AnneHathaway.png" width="0" height="0" style="visibility:hidden" src="AnneHathaway.png">
-<img id="AnyaTaylorJoy.png" width="0" height="0" style="visibility:hidden" src="AnyaTaylorJoy.png">
-<img id="ArielWinter.png" width="0" height="0" style="visibility:hidden" src="ArielWinter.png">
-<img id="BarbaraPalvin.png" width="0" height="0" style="visibility:hidden" src="BarbaraPalvin.png">
-<img id="BellaThorne.png" width="0" height="0" style="visibility:hidden" src="BellaThorne.png">
-<img id="BlakeLively.png" width="0" height="0" style="visibility:hidden" src="BlakeLively.png">
-<img id="BrendaSong.png" width="0" height="0" style="visibility:hidden" src="BrendaSong.png">
-<img id="CamilaMendes.png" width="0" height="0" style="visibility:hidden" src="CamilaMendes.png">
-<img id="ChloeBennet.png" width="0" height="0" style="visibility:hidden" src="ChloeBennet.png">
-<img id="DaisyRidley.png" width="0" height="0" style="visibility:hidden" src="DaisyRidley.png">
+<img id="AnaDeArmas" width="0" height="0" style="visibility:hidden" src="AnaDeArmas.png">
+<img id="AnneHathaway" width="0" height="0" style="visibility:hidden" src="AnneHathaway.png">
+<img id="AnyaTaylorJoy" width="0" height="0" style="visibility:hidden" src="AnyaTaylorJoy.png">
+<img id="ArielWinter" width="0" height="0" style="visibility:hidden" src="ArielWinter.png">
+<img id="BarbaraPalvin" width="0" height="0" style="visibility:hidden" src="BarbaraPalvin.png">
+<img id="BellaThorne" width="0" height="0" style="visibility:hidden" src="BellaThorne.png">
+<img id="BlakeLively" width="0" height="0" style="visibility:hidden" src="BlakeLively.png">
+<img id="BrendaSong" width="0" height="0" style="visibility:hidden" src="BrendaSong.png">
+<img id="CamilaMendes" width="0" height="0" style="visibility:hidden" src="CamilaMendes.png">
+<img id="ChloeBennet" width="0" height="0" style="visibility:hidden" src="ChloeBennet.png">
+<img id="DaisyRidley" width="0" height="0" style="visibility:hidden" src="DaisyRidley.png">
 
 
 
