--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@ if (canvasX > this.x && canvasX < this.x + 150){
  
 };
 
-blockArray.push(new block(200, 0,BarbaraPalvinimg,"Barbara Palvin"));
+blockArray.push(new block(200, 0,oneimg,"Barbara Palvin"));
 
-blockArray.push(new block(200, 200,DaisyRidleyimg,"DaisyRidley"));
-
-
-blockArray.push(new block(400, 0,AnaDeArmasimg,"Ana De Armas"));
-
-blockArray.push(new block(400, 200,BellaThorneimg,"Bella Thorne"));
+blockArray.push(new block(200, 200,twoimg,"DaisyRidley"));
 
 
-blockArray.push(new block(600, 0,ChloeBennetimg,"Chloe Bennet"));
+//blockArray.push(new block(400, 0,AnaDeArmasimg,"Ana De Armas"));
 
-blockArray.push(new block(600, 200,AliceEveimg,"Alice Eve"));
+//blockArray.push(new block(400, 200,BellaThorneimg,"Bella Thorne"));
+
+
+//blockArray.push(new block(600, 0,ChloeBennetimg,"Chloe Bennet"));
+
+//blockArray.push(new block(600, 200,AliceEveimg,"Alice Eve"));
 
 var oneimg = document.getElementById("one");
 var twoimg = document.getElementById("two");
