--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <img id="day1" width="0" height="0" style="visibility:hidden" src="day1.png">
 <img id="day2" width="0" height="0" style="visibility:hidden" src="day2.png">
+<img id="zero" width="0" height="0" style="visibility:hidden" src="zero.png">
 
 
 <canvas id="myCanvas" onload = 'move()' onclick = "clickfunc()" width="800" height="400" style=" padding-left: 0;
@@ -90,6 +91,7 @@ var threeimg = document.getElementById("three");
 
 var dayoneimg = document.getElementById("day1");
 var daytwoimg = document.getElementById("day2");
+var zero = document.getElementById("zero");
 
 var scene = 0; 
 
@@ -104,7 +106,7 @@ if (clicknum == 2){shiftX = shiftX + 10; if (shiftX > 800){shiftX = 800; scene =
 ctx.fillStyle = "black";
 ctx.fillRect(0,0, 800, 800);
 
-
+ctx.drawImage(zero,0, 0 - shiftX, 800, 400);
 ctx.drawImage(dayoneimg,0, 400 - shiftX, 800, 400);
 ctx.drawImage(daytwoimg,0, 800 - shiftX, 800, 400);
 
